# feuilles-annonces

./: .gitignore  Dockerfile  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ghcr.yml
chants/: admin.py  apps.py  migration_helpers.py  models.py  router.py  urls.py  views.py  widgets.py
chants/migrations/: 0001_initial.py  0002_remove_song_refrain_pos_song_chorus_after.py
chants/static/chants/: song-editor.css  song-editor.js
chants/templates/chants/: edit.html
dates/: admin.py  apps.py  fields.py  forms.py  liturgical_calendar.py  migration_helpers.py  models.py  ordinal.py  router.py  urls.py  utils.py  views.py
dates/migrations/: 0001_initial.py  0002_remove_eventoccurrence_event_delete_eventexception_and_more.py  0003_event_end_time_event_start_time_alter_event_end_date_and_more.py  0004_remove_event_is_recurring_occurrence.py  0005_rename_occurrence_date_rename_event_recurrence.py  0006_alter_date_end_date_rename_end_date_date__end_date_and_more.py  0007_alter_recurrence_end_time_and_more.py  0008_config.py  0009_fixedfeast_movablefeast.py  0010_rename__end_time_recurrence_end_time.py  0011_bulletin_alter_fixedfeast_recurrence_and_more.py  0012_celebrant_date_ignored_date_celebrant.py  0013_date_cancelled_date_note.py
dates/pdfs/: __init__.py  feuille_annonces.py  fonts.py
dates/static/dates/: add-dates.css  add-dates.js  edit.css  edit.js  persist.js  recurrence-widget.css  recurrence-widget.js  recurrence.js  x-tinymce.js
feuilles_annonces/: asgi.py  panels.py  settings.py  urls.py  wsgi.py
(+9 files in other folders)
